reports support in the entity data modeler

--- a/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective/perspective.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/extensions/perspective/perspective.js.template
@@ -10,7 +10,9 @@
 
 exports.getPerspective = function() {
 	return {
-#if($brand)
+#if($moduleName)
+		'name': '${moduleName}',
+#elseif($brand)
 		'name': '${brand}',
 #else
 		'name': '${projectName}',
