--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/list/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/list/controller.js.template
@@ -69,20 +69,7 @@ angular.module('page')
 	}
 	load();
 
-	$scope.openNewDialog = function() {
-		$scope.actionType = 'new';
-		$scope.entity = {};
-		toggleEntityModal();
-	};
-
-	$scope.openEditDialog = function(entity) {
-		$scope.actionType = 'update';
-		$scope.entity = entity;
-		toggleEntityModal();
-	};
-
-	$scope.openDeleteDialog = function(entity) {
-		$scope.actionType = 'delete';
+	$scope.openInfoDialog = function(entity) {
 		$scope.entity = entity;
 		toggleEntityModal();
 	};
@@ -90,49 +77,6 @@ angular.module('page')
 	$scope.close = function() {
 		load();
 		toggleEntityModal();
-	};
-
-	$scope.create = function() {
-		${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
-		.success(function(data) {
-			load();
-			toggleEntityModal();
-			$messageHub.messageEntityModified();
-		}).error(function(data) {
-			alert(JSON.stringify(data));
-		});
-			
-	};
-
-	$scope.update = function() {
-#foreach ($property in $properties)
-#if($property.dataPrimaryKey)
-		${dollar}http.put(api + '/' + ${dollar}scope.entity.${property.name}, JSON.stringify(${dollar}scope.entity))
-#end
-#end
-
-		.success(function(data) {
-			load();
-			toggleEntityModal();
-			$messageHub.messageEntityModified();
-		}).error(function(data) {
-			alert(JSON.stringify(data));
-		})
-	};
-
-	$scope.delete = function() {
-#foreach ($property in $properties)
-#if($property.dataPrimaryKey)
-		${dollar}http.delete(api + '/' + ${dollar}scope.entity.${property.name})
-#end
-#end
-		.success(function(data) {
-			load();
-			toggleEntityModal();
-			$messageHub.messageEntityModified();
-		}).error(function(data) {
-			alert(JSON.stringify(data));
-		});
 	};
 
 #foreach ($property in $properties)
