--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/master-manage/master/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/master-manage/master/controller.js.template
@@ -27,6 +27,9 @@ angular.module('page')
 #end
 		messageEntityModified: function() {
 			message('modified');
+		},
+		messageEntitySelected: function(id) {
+			message('selected', id);
 		}
 	};
 }])
@@ -134,7 +137,6 @@ angular.module('page')
 			alert(JSON.stringify(data));
 		});
 	};
-
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN")
 	${dollar}scope.${property.name.toLowerCase()}OptionValue = function(optionKey) {
@@ -145,15 +147,22 @@ angular.module('page')
 		}
 		return null;
 	};
-#end
-#end
 
+#end
+#end
 	$messageHub.onEntityRefresh(load);
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName)
 	${dollar}messageHub.on${property.relationshipEntityName}Modified(${property.name.toLowerCase()}OptionsLoad);
 #end
 #end
+
+	$scope.selectEntity = function(entity) {
+		$scope.selectedEntity = entity;
+		${dollar}messageHub.messageEntitySelected({
+			'id': entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end
+		})
+	};
 
 	function toggleEntityModal() {
 		$('#entityModal').modal('toggle');
