--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
@@ -174,6 +174,12 @@ angular.module('ideUiCore', ['ngResource'])
 		},
 		link: function(scope, el, attrs){
 			scope.perspectives = Perspectives.query();
+			scope.activePerspective = localStorage.getItem('DIRIGIBLE.application.{{projectName}}.activePerspective');
+
+			scope.setActivePerspective = function(activePerspective) {
+				localStorage.setItem('DIRIGIBLE.application.{{projectName}}.activePerspective', activePerspective);
+				scope.activePerspective = activePerspective;
+			};
 		},
 		templateUrl: '/services/v3/web/{{projectName}}/resources/templates/sidebar.html'
 	}
