--- a/templates/template-application-angular/src/main/resources/template-application-angular/views/master-list/master/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/views/master-list/master/index.html.template
@@ -17,7 +17,7 @@
 		<h1>${menuLabel}</h1>
 	</div>
 	<div class="container">
-		<table class="table product-table">
+		<table class="table table-striped table-hover product-table">
 			<thead>
 				<tr>
 					<th>#</th>
