--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -77,6 +77,11 @@
 		 	<artifactId>dirigible-database-h2</artifactId>
 		 	<version>3.2.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-custom</artifactId>
+		 	<version>3.2.2-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Core Services -->
 		<dependency>
