--- a/groups/runtime-all/pom.xml
+++ b/groups/runtime-all/pom.xml
@@ -51,6 +51,11 @@
 		 	<artifactId>dirigible-database-h2</artifactId>
 		 	<version>3.2.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-custom</artifactId>
+		 	<version>3.2.2-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Core Services -->
 		<dependency>
