--- a/modules/database/database-custom/pom.xml
+++ b/modules/database/database-custom/pom.xml
@@ -40,9 +40,9 @@
             <version>3.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
-		    <groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.2.0</version>
 		</dependency>
     </dependencies>
 
