--- a/modules/database/database-h2/pom.xml
+++ b/modules/database/database-h2/pom.xml
@@ -45,9 +45,9 @@
 		    <version>1.3.176</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.2.0</version>
 		</dependency>
     </dependencies>
 
