Enable multiple perspectives per Entity Data Model #283

--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
@@ -216,7 +216,7 @@ angular.module('ideUiCore', ['ngResource'])
 		restrict: 'AE',
 		scope: {
 			viewsLayoutModel: '=',
-			viewsExtensionPoint: '@viewsExtensionPoint',
+			viewsExtensionPoint: '@viewsExtensionPoint'
 		},
 		link: function(scope, el, attrs){
 			var views;
