Adds support for multiple tiles per entity data model #283

--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.js.template
@@ -10,12 +10,16 @@
 
 exports.getTile = function() {
 	return {
-#if($perspectiveName)
+#if($title)
+		'name': '${title}',
+#elseif($perspectiveName)
 		'name': '${perspectiveName}',
 #else
 		'name': '${projectName}',
 #end
-#if($perspectiveIcon)
+#if($icon)
+		'icon': '${icon}',
+#elseif($perspectiveIcon)
 		'icon': '${perspectiveIcon}',
 #else
 		'icon': 'life-ring',
