--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.extension.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/extensions/tile/tile.extension.template
@@ -1,5 +1,5 @@
 {
 	'description': '{{perspectiveName}} tiles',
 	'extensionPoint': 'launchpad-{{extensionName}}-tiles',
-	'module': '{{projectName}}/ui/{{perspectiveName}}/extensions/tile/tile.js'
+	'module': '{{projectName}}/ui/{{perspectiveName}}/views/{{name}}/extensions/tile/tile.js'
 }
