--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/controller.js.template
@@ -42,7 +42,7 @@ angular.module('page')
 	var api = '/services/v3/js/${projectName}/api/${name}.js';
 #foreach ($property in $properties)
 #if($property.widgetType == "DROPDOWN")
-#if($property.widgetService)
+#if($property.widgetService && "$property.widgetService" != "")
 	var ${property.name.toLowerCase()}OptionsApi = '${property.widgetService}';
 #else
 	var ${property.name.toLowerCase()}OptionsApi = '/services/v3/js/${projectName}/api/${property.relationshipEntityName}.js';
