Application templates fixes #283

--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
@@ -1,3 +1,6 @@
+#if($dataCount)
+var query = require('db/v3/query');
+#end
 var daoApi = require('db/v3/dao');
 var dao = daoApi.create({
 	'table': '${dataName}',
@@ -13,7 +16,6 @@ var dao = daoApi.create({
 #end
 ]
 });
-
 exports.list = function(settings) {
 	return dao.list(settings);
 };
@@ -32,4 +34,13 @@ exports.update = function(entity) {
 
 exports.delete = function(id) {
 	dao.remove(id);
+};
+
+exports.count = function() {
+#if($dataCount)
+	var resultSet = query.execute("${dataCount}");
+	return resultSet !== null ? resultSet[0].COUNT : 0;
+#else
+	return dao.count();
+#end
 };
