--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/controller.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/controller.js.template
@@ -19,7 +19,7 @@ angular.module('page')
 			on('${launchpadName}.${projectName}.${name}.refresh', callback);
 		},
 #foreach ($property in $properties)
-#if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName)
+#if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName != "")
 		on${property.relationshipEntityName}Modified: function(callback) {
 			on('${launchpadName}.${projectName}.${property.relationshipEntityName}.modified', callback);
 		},
@@ -171,7 +171,7 @@ angular.module('page')
 #end
 	$messageHub.onEntityRefresh(load);
 #foreach ($property in $properties)
-#if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName)
+#if($property.widgetType == "DROPDOWN" && $property.relationshipEntityName != "")
 	${dollar}messageHub.on${property.relationshipEntityName}Modified(${property.name.toLowerCase()}OptionsLoad);
 #end
 #end
