--- a/releng/server-database/src/main/resources/dirigible.properties
+++ b/releng/server-database/src/main/resources/dirigible.properties
@@ -14,4 +14,4 @@ DIRIGIBLE_PRODUCT_VERSION=3.2
 DIRIGIBLE_PRODUCT_TYPE=database
 DIRIGIBLE_INSTANCE_NAME=server
 DIRIGIBLE_HOME_URL=/services/v3/web/ide-database/index.html
-
+DIRIGIBLE_DATABASE_PROVIDER=local
