--- a/releng/server-javascript/src/main/resources/dirigible.properties
+++ b/releng/server-javascript/src/main/resources/dirigible.properties
@@ -13,4 +13,5 @@ DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
 DIRIGIBLE_PRODUCT_VERSION=3.2
 DIRIGIBLE_PRODUCT_TYPE=javascript
 DIRIGIBLE_INSTANCE_NAME=server
+DIRIGIBLE_DATABASE_PROVIDER=local
 
