--- a/releng/server-keycloak-all/src/main/resources/dirigible.properties
+++ b/releng/server-keycloak-all/src/main/resources/dirigible.properties
@@ -13,4 +13,4 @@ DIRIGIBLE_PRODUCT_NAME="Eclipse Dirigible";
 DIRIGIBLE_PRODUCT_VERSION=3.2
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=server
-
+DIRIGIBLE_DATABASE_PROVIDER=local
