--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/dao/entity.js.template
@@ -11,7 +11,11 @@ var dao = daoApi.create({
 			'column': '${property.dataName}',
 			'type':'${property.dataType}',
 			'id': ${property.dataPrimaryKey},
-			'required': ${property.dataNullable}
+#if($property.dataNotNull)
+			'required': true
+#else
+			'required': false
+#end
 		}#if($foreach.hasNext),#end
 #end
 ]
