--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
@@ -2,37 +2,44 @@
     'schema': {
         'structures': [
 #foreach ($model in $models)
+#if($foreach.isFirst())
             {
+#else
+ {
+#end
                 'name': '${model.dataName}',
                 'type': 'TABLE',
-                'columns': 
-                [
+                'columns': [
 #foreach ($property in $model.properties)
+#if($foreach.isFirst())
                     {
-                        'name': '${property.dataName}',
+#else
+ {
+#end
                         'type': '${property.dataType}',
 #if($property.dataLength)
                         'length': ${property.dataLength},
 #end
-#if($propert.dataPrimaryKey)
+#if($property.dataPrimaryKey)
                         'primaryKey': true,
 #end
-#if($propert.dataAutoIncrement)
+#if($property.dataAutoIncrement)
                         'identity': true,
 #end
 #if($property.dataPrecision)
                         'precision': '${property.dataPrecision}',
 #end
 #if($property.dataScale)
-                        'scale': '${property.dataScale}'
+                        'scale': '${property.dataScale}',
 #end
 #if($property.dataNotNull)
 #else
-                        'nullable': true
+                        'nullable': true,
 #end
+                        'name': '${property.dataName}'
                     }#if($foreach.hasNext),#end
 #end
-                ]
+]
             }#if($foreach.hasNext),#end
 #end
         ]
