--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/index.html.template
@@ -1,3 +1,4 @@
+#set($dollar = '$' )
 <!DOCTYPE html>
 <!--
   ~ Copyright (c) 2017 SAP and others.
@@ -16,7 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{brand}} | {{perspectiveName}}</title>
+    <title>${brand} | ${perspectiveName}</title>
 
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
@@ -36,13 +37,13 @@
 
 <body ng-app="workbench" ng-controller="WorkbenchController">
 
-	<div menu menu-extension-point="launchpad-{{projectName}}-menu"></div>
+	<div menu menu-extension-point="launchpad-${projectName}-menu"></div>
 
 	<div class="shell">
 		<div class="sidebar list-group" sidebar active="Workbench"></div>
-		<div id="{{perspectiveName}}" class="plane" views-layout views-layout-model="layoutModel" views-extension-point="launchpad-{{perspectiveName}}-view""></div>
+		<div id="${perspectiveName}" class="plane" views-layout views-layout-model="layoutModel" views-extension-point="launchpad-${perspectiveName}-view""></div>
 	</div>
-	<div class="statusbar" status-bar>{{message}}</div>
+	<div class="statusbar" status-bar>${message}</div>
 	
 	<!-- jQuery -->
 	<script type="text/javascript" src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
@@ -57,9 +58,16 @@
 	<!-- GoldenLayout with Theme Support -->
 	<script type="text/javascript" src="/services/v3/web/resources/goldenlayout/1.5.9/goldenlayout.min.js"></script>
 
-	<script type="text/javascript" src="/services/v3/web/{{launchpadName}}/resources/js/message-hub.js"></script>	
-	<script type="text/javascript" src="/services/v3/web/{{launchpadName}}/resources/js/ui-layout.js"></script>
-	<script type="text/javascript" src="/services/v3/web/{{launchpadName}}/resources/js/ui-core-ng-modules.js"></script>
+#if($includeLaunchpad)
+	<script type="text/javascript" src="/services/v3/web/${projectName}/resources/js/message-hub.js"></script>	
+	<script type="text/javascript" src="/services/v3/web/${projectName}/resources/js/ui-layout.js"></script>
+	<script type="text/javascript" src="/services/v3/web/${projectName}/resources/js/ui-core-ng-modules.js"></script>
+
+#else
+	<script type="text/javascript" src="/services/v3/web/${launchpadName}/resources/js/message-hub.js"></script>	
+	<script type="text/javascript" src="/services/v3/web/${launchpadName}/resources/js/ui-layout.js"></script>
+	<script type="text/javascript" src="/services/v3/web/${launchpadName}/resources/js/ui-core-ng-modules.js"></script>
+#end
 
 	<script type="text/javascript">
 		angular.module('workbench', ['ngResource', 'ideUiCore'])
@@ -92,10 +100,14 @@
 				}
 			};
 
-			$http.get('/services/v3/js/{{launchpadName}}/api/launchpad/views.js?extensionPoint=launchpad-{{perspectiveName}}-view')
+#if($includeLaunchpad)
+			${dollar}http.get('/services/v3/js/${projectName}/api/launchpad/views.js?extensionPoint=launchpad-${perspectiveName}-view')
+#else
+			${dollar}http.get('/services/v3/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${perspectiveName}-view')
+#end
 			.success(function(views) {
 				for (var i = 0 ; i < views.length; i ++) {
-					$scope.layoutModel.views.push(views[i].id);
+					${dollar}scope.layoutModel.views.push(views[i].id);
 				}
 
 			});
