--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
@@ -141,7 +141,11 @@
 	<script type="text/javascript" src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js" async></script>
 	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
 	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+#if($includeLaunchpad)
+	<script type="text/javascript" src="/services/v3/web/${projectName}/resources/js/message-hub.js"></script>
+#else
 	<script type="text/javascript" src="/services/v3/web/${launchpadName}/resources/js/message-hub.js"></script>
+#end
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
 	<script type="text/javascript" src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
